syntax ="proto3";

package upload;

service UploadService{
  rpc upload(Upload) returns(Empty){}
  rpc uploadMultiple(Uploads) returns(Empty){}
  rpc update(Update) returns(Empty){}
  rpc delete(Delete) returns(Empty){}
  rpc deleteMultiple(Deletes) returns(Empty){}
}

message Upload{
  string fileName=1;
  bytes file=2;
}
message Empty{}

message Update{
  string fileName=1;
  bytes file=2;
  string oldFileName=3;
}
message Delete{
  string fileName=1;
}

message Uploads{
  repeated Upload uploads =1;
}
message Deletes{
  repeated Delete deletes=1;
}